<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ventureindustries.distancetest.DistanceTest">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:id="@+id/text1"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/longitude_field"
        android:layout_alignBottom="@+id/longitude_field"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_field"
        android:text="@string/zero"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:layout_alignEnd="@+id/latitude_field"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/text1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:id="@+id/text2"
        android:layout_alignTop="@+id/latitude_field"
        android:layout_alignBottom="@+id/latitude_field"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/latitude_field"
        android:text="@string/zero"
        android:layout_toEndOf="@+id/text1"
        android:layout_below="@+id/longitude_field"
        android:textAlignment="center"
        android:textSize="30sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start_button"
        android:layout_above="@+id/result_field"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stop_button"
        android:layout_alignTop="@+id/start_button"
        android:layout_alignEnd="@+id/result_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/result_field"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notReady"
        android:id="@+id/ready_text"
        android:layout_below="@+id/text2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/stop_button"
        android:textColor="#ff0000"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="45sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network"
        android:id="@+id/network_button"
        android:layout_below="@+id/ready_text"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps"
        android:id="@+id/gps_button"
        android:layout_alignTop="@+id/network_button"
        android:layout_alignStart="@+id/units_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unit_meters"
        android:id="@+id/units_text"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/result_field"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/update_interval"
        android:text="@string/default_interval"
        android:textSize="30sp"
        android:layout_above="@+id/start_button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/start_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setInterval"
        android:id="@+id/set_button"
        android:layout_alignTop="@+id/update_interval"
        android:layout_toEndOf="@+id/update_interval" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/min_distance"
        android:layout_above="@+id/update_interval"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/set_button"
        android:text="@string/default_distance" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDistance"
        android:id="@+id/set_distance_button"
        android:layout_alignBottom="@+id/min_distance"
        android:layout_alignStart="@+id/set_button" />


</RelativeLayout>
